# PrivacyGuard

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: build-and-test.yml  cron.yml  deploy-web.yml  release.yml  reusable_test.yml
analysis/: aggregate_analysis_input.py  analysis_node.py  balanced_analysis_node.py  base_analysis_node.py  factored_analysis_node.py  fdp_analysis_node.py  fpr_lower_bound_analysis_node.py  mia_results.py  parallel_analysis_node.py  parallel_fpr_lower_bound_analysis_node.py  probabilistic_memorization_analysis_node.py  reference_model_comparison_node.py  text_inclusion_analysis_node.py
analysis/benchmarks/: benchmark_factored_analysis_node.py
analysis/extraction/: probabilistic_memorization_analysis_from_logits_input.py  probabilistic_memorization_analysis_from_logits_node.py  probabilistic_memorization_analysis_input.py  probabilistic_memorization_analysis_node.py  reference_model_comparison_node.py  text_inclusion_analysis_input.py  text_inclusion_analysis_node.py
analysis/mia/: aggregate_analysis_input.py  analysis_node.py  balanced_analysis_node.py  factored_analysis_node.py  fdp_analysis_node.py  fpr_lower_bound_analysis_node.py  mia_results.py  parallel_analysis_node.py  parallel_fpr_lower_bound_analysis_node.py  score_analysis_node.py
analysis/scripts/: probabilistic_memorization_analysis.py  reference_model_comparison.py  text_inclusion_metrics.py
analysis/scripts/tests/: test_reference_model_comparison.py
analysis/tests/: base_test_analysis_node.py  test_analysis_input.py  test_analysis_node.py  test_balanced_analysis_node.py  test_factored_analysis_node.py  test_fdp_analysis_node.py  test_fpr_lower_bound_analysis_node.py  test_mia_results.py  test_parallel_analysis_node.py  test_parallel_fpr_lower_bound_analysis_node.py  test_probabilistic_memorization.py  test_reference_model_comparison.py  test_text_inclusion.py
analysis/tests/test_data/: df_test_merge.json.zst  df_train_merge.json.zst
attacks/: calib_attack.py  lira_attack.py  rmia_attack.py  text_inclusion_attack.py
attacks/extraction/: generation_attack.py  logits_attack.py  logprobs_attack.py
attacks/extraction/models/: __init__.py  base_model.py  huggingface_model.py
attacks/extraction/predictors/: __init__.py  huggingface_predictor.py
attacks/extraction/scripts/: generation.py
attacks/extraction/tests/: test_logits_attack.py  test_logprobs_attack.py
attacks/extraction/utils/: data_utils.py  model_inference.py
attacks/tests/: test_calib_attack.py  test_lira_attack.py  test_text_inclusion_attack.py
privacy_guard/analysis/: base_analysis_input.py  base_analysis_node.py  base_analysis_output.py
privacy_guard/analysis/code_similarity/: code_bleu_node.py  code_similarity_analysis_input.py  tree_edit_distance_node.py
privacy_guard/analysis/extraction/: edit_similarity_node.py  probabilistic_memorization_analysis_from_logits_input.py  probabilistic_memorization_analysis_from_logits_node.py  probabilistic_memorization_analysis_input.py  probabilistic_memorization_analysis_node.py  reference_model_comparison_input.py  reference_model_comparison_node.py  text_inclusion_analysis_input.py  text_inclusion_analysis_node.py
privacy_guard/analysis/lia/: lia_analysis_input.py  lia_analysis_node.py
privacy_guard/analysis/llm_judge/: llm_judge_analysis_input.py  llm_judge_analysis_node.py  llm_judge_config.py
privacy_guard/analysis/mia/: aggregate_analysis_input.py  analysis_node.py  balanced_analysis_node.py  fdp_analysis_node.py  fpr_lower_bound_analysis_node.py  mia_results.py  parallel_analysis_node.py  parallel_fpr_lower_bound_analysis_node.py  score_analysis_node.py
privacy_guard/analysis/scripts/: probabilistic_memorization_analysis.py  reference_model_comparison.py  text_inclusion_metrics.py
privacy_guard/analysis/tests/: base_test_analysis_node.py  test_analysis_input.py  test_analysis_node.py  test_balanced_analysis_node.py  test_code_bleu_node.py  test_edit_similarity_node.py  test_fdp_analysis_node.py  test_fpr_lower_bound_analysis_node.py  test_lia_analysis_input.py  test_lia_analysis_node.py  test_lia_attack_integration.py  test_llm_judge_analysis_input.py  test_llm_judge_analysis_node.py  test_mia_results.py  test_parallel_analysis_node.py  test_parallel_fpr_lower_bound_analysis_node.py  test_probabilistic_memorization.py  test_probabilistic_memorization_from_logits.py  test_reference_model_comparison.py  test_text_inclusion.py  test_tree_edit_distance_node.py
privacy_guard/attacks/: base_attack.py  calib_attack.py  lia_attack.py  lira_attack.py  loss_attack.py  rmia_attack.py  text_inclusion_attack.py
privacy_guard/attacks/code_similarity/: code_bleu_attack.py  py_tree_sitter_attack.py
privacy_guard/attacks/extraction/: generation_attack.py  ip_attack.py  logits_attack.py  logprobs_attack.py
privacy_guard/shadow_model_training/: __init__.py  dataset.py  model.py  training.py  visualization.py
tutorial_notebooks/: custom_dataset_tutorial.ipynb  fdp_analysis_tutorial.ipynb  fdp_analysis_tutorial.py.ipynb  lira_attack_cifar10_tutorial.ipynb  loss_attack_tutorial.ipynb  memorization_online_content_gpt_oss_20b.ipynb  probabilistic_memorization_tutorial.ipynb  rmia_attack_cifar10_tutorial.py.ipynb  text_extraction_tutorial.ipynb
tutorials/: fdp_analysis_tutorial.py  lira_attack_cifar10_tutorial.py  loss_attack_tutorial.py  probabilistic_memorization_tutorial.py  rmia_attack_cifar10_tutorial.py  text_extraction_tutorial.py
web/: .gitignore  index.html  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/pyodide/: bridge.ts  (+1 more)
(+42 files in other folders)
