[build-system]
requires = ["setuptools>=34.4", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "privacy_guard"
description = "PrivacyGuard"
authors = [{name = "Meta Platforms, Inc."}]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["PrivacyGuard", "Privacy", "Privacy Attack", "Privacy Analysis"]
classifiers = [
    "Private :: Do Not Upload", # Required to prevent PyPI uploads
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

dependencies = [ # need to double check which of these are required.
    "jinja2",  # also a Plotly dep
    "pandas",
    "scipy",
    "scikit-learn",
    "ipywidgets",
    # Needed for compatibility with ipywidgets >= 8.0.0
    "plotly>=5.12.0",
    "pyre-extensions",
    "sympy",
    "markdown",
    "pytest>=4.6",
    "pytest-cov",
    "pytest-timeout",
    "torch",
    'tqdm',
    'textdistance',
    'transformers',
    'later',
]

[project.optional-dependencies]
dev = [
    "beautifulsoup4",
    "Jinja2",
    "pyfakefs",
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx_rtd_theme",
    "lxml",
    "mdformat-myst",
]


notebook = [

]

unittest_minimal = [
]

unittest = [
    "privacy-guard[dev,notebook,unittest_minimal]",
]

tutorial = [
    "jupyter",
    "mdformat",
]

[project.urls]
Repository = "https://github.com/facebookresearch/PrivacyGuard"

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
"*" = ["*.js", "*.css", "*.html"]

#[tool.setuptools_scm]
#write_to = "privacy_guard/version.py"
#local_scheme = "node-and-date"

[tool.usort]
first_party_detection = false

[tool.ufmt]
formatter = "ruff-api"
